Migrating to Java 11 (#191)
* Switched to Java 11

* Using of SortedSet

* Improved code

* Removed unnecessary apache commons libraries

Co-authored-by: Ivan Vakhrushev <i.vakhrushev@banki.ru>