@@ -10,12 +10,13 @@
 
 package io.github.mfvanek.pg.connection;
 
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.Pair;
-
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
+import java.util.SortedSet;
+import java.util.TreeSet;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 
@@ -36,7 +37,7 @@ final class PgUrlParser {
 
     // For example, jdbc:postgresql://host-1:6432/db_name?param=value
     @Nonnull
-    static List<Pair<String, String>> extractNameWithPortAndUrlForEachHost(@Nonnull final String pgUrl) {
+    static List<Map.Entry<String, String>> extractNameWithPortAndUrlForEachHost(@Nonnull final String pgUrl) {
         PgConnectionValidators.pgUrlNotBlankAndValid(pgUrl, PG_URL);
         final int lastIndex = pgUrl.lastIndexOf('/');
         final String dbNameWithParams = pgUrl.substring(lastIndex);
@@ -45,13 +46,13 @@ final class PgUrlParser {
         return Arrays.stream(allHostsWithPort.split(","))
                 .distinct()
                 .sorted()
-                .map(h -> Pair.of(h, URL_HEADER + h + dbNameWithParamsForReplica))
-                .collect(Collectors.toList());
+                .map(h -> Map.entry(h, URL_HEADER + h + dbNameWithParamsForReplica))
+                .collect(Collectors.toUnmodifiableList());
     }
 
     @Nonnull
     private static String convertToReplicaConnectionString(@Nonnull final String dbNameWithParams) {
-        final List<String> primaryServerTypes = Arrays.asList("targetServerType=primary", "targetServerType=master");
+        final List<String> primaryServerTypes = List.of("targetServerType=primary", "targetServerType=master");
         for (final String serverType : primaryServerTypes) {
             if (dbNameWithParams.contains(serverType)) {
                 return dbNameWithParams.replace(serverType, "targetServerType=any");
@@ -61,13 +62,14 @@ final class PgUrlParser {
     }
 
     @Nonnull
-    static Set<String> extractHostNames(@Nonnull final String pgUrl) {
+    static SortedSet<String> extractHostNames(@Nonnull final String pgUrl) {
         PgConnectionValidators.pgUrlNotBlankAndValid(pgUrl, PG_URL);
         final String allHostsWithPort = extractAllHostsWithPort(pgUrl);
-        return Arrays.stream(allHostsWithPort.split(","))
-                .filter(StringUtils::isNotBlank)
+        return Collections.unmodifiableSortedSet(Arrays.stream(allHostsWithPort.split(","))
+                .filter(Predicate.not(String::isBlank))
                 .map(h -> h.substring(0, h.lastIndexOf(':')))
-                .collect(Collectors.toSet());
+                .sorted()
+                .collect(Collectors.toCollection(TreeSet::new)));
     }
 
     @Nonnull
@@ -76,7 +78,6 @@ final class PgUrlParser {
         if (lastIndex >= URL_HEADER.length()) {
             return pgUrl.substring(URL_HEADER.length(), lastIndex);
         }
-
         return pgUrl.substring(URL_HEADER.length());
     }
 }
