@@ -17,21 +17,21 @@ import io.github.mfvanek.pg.connection.PgConnection;
 import io.github.mfvanek.pg.connection.PgConnectionImpl;
 import io.github.mfvanek.pg.model.PgContext;
 import io.github.mfvanek.pg.settings.ImportantParam;
-import org.apache.commons.lang3.tuple.Pair;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.function.Consumer;
 import javax.annotation.Nonnull;
 import javax.sql.DataSource;
 
 public abstract class DatabaseAwareTestBase {
 
-    private static final PostgreSqlContainerWrapper POSTGRES = new PostgreSqlContainerWrapper(Arrays.asList(
-            Pair.of(ImportantParam.LOCK_TIMEOUT.getName(), "1000"),
-            Pair.of(ImportantParam.SHARED_BUFFERS.getName(), "256MB"),
-            Pair.of(ImportantParam.MAINTENANCE_WORK_MEM.getName(), "128MB"),
-            Pair.of(ImportantParam.WORK_MEM.getName(), "16MB"),
-            Pair.of(ImportantParam.RANDOM_PAGE_COST.getName(), "1")
+    private static final PostgreSqlContainerWrapper POSTGRES = new PostgreSqlContainerWrapper(List.of(
+            Map.entry(ImportantParam.LOCK_TIMEOUT.getName(), "1000"),
+            Map.entry(ImportantParam.SHARED_BUFFERS.getName(), "256MB"),
+            Map.entry(ImportantParam.MAINTENANCE_WORK_MEM.getName(), "128MB"),
+            Map.entry(ImportantParam.WORK_MEM.getName(), "16MB"),
+            Map.entry(ImportantParam.RANDOM_PAGE_COST.getName(), "1")
     ));
 
     @Nonnull
